# SFML-Logo-Maker

./: BlinkingCursor.cpp  BlinkingCursor.h  CMakeLists.txt  Font.cpp  Font.h  History.cpp  History.h  Letter.cpp  Letter.h  Snapshot.h  SnapshotInterface.h  TextBox.cpp  TextBox.h  TextInput.cpp  TextInput.h  Typing.cpp  Typing.h  main.cpp
Helper/: MouseEvents.cpp  MouseEvents.h  Position.cpp  Position.h  StatesENUM.h  states.cpp  states.h
